src/components/Button/styles.css
.NLT__button {
    display: flex;
    align-items: center;
    padding: 4px 6px;
    white-space: nowrap;
    color: var(--text-normal);
    margin-right: 0;
    cursor: pointer;
}

.NLT__button--icon { 
    background-color: transparent !important;
    box-shadow: none !important;
}

.NLT__button--icon:hover {
    box-shadow: var(--input-shadow) !important;
}

.NLT__button--simple {
    padding: 0;
    height: 1px;
}

.NLT__button--simple:hover {
   box-shadow: none !important;
}

